# caryatid

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  monitor.md
.github/workflows/: publish-crates-on-version-change.yml  run-test-coverage-report-on-push-to-main.yml  run-tests-on-push-to-main.yml
examples/: README.md  SPEC_KIT_PERFORMANCE.md
examples/haskell/: README.md  caryatid-haskell-interop.cabal
examples/haskell/app/: Main.hs
examples/multi/: Cargo.toml  README.md  multi.toml
examples/multi/src/: main.rs  publisher1.rs  publisher2.rs  subscriber.rs
examples/performance/: Cargo.toml  README.md  performance.toml
examples/performance-suite/: Cargo.toml  Makefile  README.md  performance-suite.toml
examples/performance-suite/scenarios/: high_throughput.toml  large_messages.toml  multi_publisher.toml  multi_subscriber.toml  simple.toml  slow_consumer.toml
examples/performance-suite/src/: config.rs  coordinator.rs  main.rs  message.rs  metrics.rs  publisher_perf.rs  reporter.rs  subscriber_perf.rs
examples/performance/src/: main.rs  message.rs  perf_publisher.rs  perf_subscriber.rs  publisher.rs  subscriber.rs
examples/request/: Cargo.toml  README.md  request.toml
examples/request/src/: main.rs  requester.rs  responder.rs
examples/rest/: Cargo.toml  README.md  rest.toml
examples/rest/src/: main.rs  message.rs  rest_hello_world.rs
examples/simple/: Cargo.toml  README.md  simple.toml
examples/simple/src/: main.rs  publisher.rs  simple_publisher.rs  simple_subscriber.rs  subscriber.rs
examples/typed/: Cargo.toml  README.md  typed.toml
examples/typed/src/: main.rs  message.rs  publisher.rs  subscriber.rs  typed_publisher.rs  typed_subscriber.rs
main/: Cargo.toml  caryatid.toml
main/src/: main.rs
modules/: README.md
modules/clock/: Cargo.toml  README.md
modules/clock/src/: clock.rs  messages.rs
modules/playback/: Cargo.toml  README.md
modules/playback/src/: playback.rs
modules/record/: Cargo.toml  README.md
modules/record/src/: record.rs
modules/rest_server/: Cargo.toml  README.md
modules/rest_server/src/: messages.rs  rest_server.rs
modules/sample/: Cargo.toml
modules/sample-publisher/: Cargo.toml
modules/sample-publisher/src/: lib.rs
modules/sample-subscriber/: Cargo.toml
modules/sample-subscriber/src/: lib.rs
modules/sample/src/: lib.rs
modules/sample_publisher/: Cargo.toml
modules/sample_publisher/src/: sample_publisher.rs
modules/sample_subscriber/: Cargo.toml
modules/sample_subscriber/src/: sample_subscriber.rs
modules/spy/: Cargo.toml  README.md
modules/spy/src/: spy.rs
process/: Cargo.toml  README.md  caryatid.toml
process/src/: correlation_bus.rs  in_memory_bus.rs  loaded_module.rs  main.rs  match_topic.rs  mock_bus.rs  monitor.rs  process.rs  rabbit_mq_bus.rs  routing_bus.rs
sample/: Cargo.toml  caryatid.toml
sample/src/: main.rs
scripts/: coverage.sh
sdk/: Cargo.toml  README.md
sdk/macros/: Cargo.toml
sdk/macros/src/: lib.rs  macros.rs
sdk/src/: config.rs  constants.rs  context.rs  correlation_bus.rs  in_memory_bus.rs  lib.rs  match_topic.rs  message_bus.rs  messages.rs  mock_bus.rs  module.rs  module_registry.rs
spec-kit-performance/: COMPARISON.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  WORKFLOW.md  speckit.constitution  speckit.plan  speckit.specify  speckit.tasks
tools/: README.md
tools/spy/: Cargo.toml  README.md  spy.toml
tools/spy/src/: main.rs  subscriber.rs
