# Caryatid framework workspace root

[workspace]
members = [
    "sdk",                # The SDK library for modules
    "process",            # Library for processes

    # Core modules
    "modules/clock",      # System clock

    # Examples
    "examples/simple",    # Sample process
]

resolver = "2"
