# Caryatid framework workspace root

[workspace]
members = [
    "sdk",                  # The SDK library for modules
    "process",              # Library for processes

    # Core modules
    "modules/clock",        # System clock
    "modules/rest_server",  # REST server
    "modules/spy",          # Message spy module
    "modules/record",       # Message recorder module
    "modules/playback",     # Message playback module

    # Examples
    "examples/simple",      # Sample process
    "examples/request",     # Request-response
    "examples/multi",       # Multi-channel subscription
    "examples/performance", # Performance test
    "examples/typed",       # Typed message test
    "examples/rest",        # REST server test
]

resolver = "2"
