# Caraytid process - loads and runs modules
[package]
name = "caryatid_process"
version = "0.8.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Library for building a Caryatid process"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { version="0.8", path = "../sdk" }
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.15.11"
tracing = "0.1.40"
serde = "1.0.210"
serde_json = "1.0"
serde_cbor = "0.11.2"
tracing-subscriber = "0.3.18"
lapin = "2.5.3"
tokio-executor-trait = "2.1.3"

[lib]
path = "src/process.rs"
