# Caraytid process - loads and runs modules
[package]
name = "caryatid_process"
version = "0.12.2"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Library for building a Caryatid process"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { version="0.12", path = "../sdk" }
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.15.11"
minicbor-serde = { version = "0.6", features = ["alloc"] }
tracing = "0.1.40"
serde = "1.0.210"
serde_json = "1.0"
tracing-subscriber = "0.3.18"
lapin = "3.7.1"
tokio-executor-trait = "3.1.0"
async-trait = "0.1.88"

[lib]
path = "src/process.rs"
