# Sample 'main' for a Caryatid process
[package]
name = "caryatid_sample"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Sample 'main' for a Caryatid process"

[dependencies]
caryatid_process = { path = "../process" }
anyhow = "1.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }

# Modules
sample_subscriber = { path = "../modules/sample_subscriber" }
sample_publisher = { path = "../modules/sample_publisher" }
