# Caraytid module SDK

[package]
name = "caryatid-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "The Caryatid framework module SDK"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"
config = "0.14.0"
caryatid-macros = { path = "macros" }
log = "0.4.22"

[lib]
crate-type = ["rlib"]
