# Caraytid module SDK

[package]
name = "caryatid_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "The Caryatid framework module SDK"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"
config = "0.14.0"
caryatid-macros = { path = "macros" }
tracing = "0.1.40"
serde = "1.0.214"

[lib]
crate-type = ["rlib"]
