# Caraytid module SDK

[package]
name = "caryatid_sdk"
version = "0.2.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "The Caryatid framework module SDK"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"
config = "0.14.0"
caryatid_macros = { version="0.1", path = "macros" }
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[lib]
crate-type = ["rlib"]
