cabal-version:      3.0
name:               caryatid-haskell-interop
version:            0.1.0.0
synopsis:           Simple demonstration of interoperability between Haskell and Caryatid Rust
license:            Apache-2.0
author:             Paul Clark
maintainer:         paul.clark@iohk.io
category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

executable caryatid-haskell-interop
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      amqp >=0.18.1,
                      cborg >=0.2.0.0,
                      bytestring,
                      text

    hs-source-dirs:   app
    default-language: Haskell2010
