# Simple example Caryatid process
[package]
name = "multi_example"
version = "0.1.0"
edition = "2021"
authors = ["Alex Woods <alex.woods@iohk.io>"]
description = "Multi-channel subscription Caryatid process"

[dependencies]
# Process to construct main
caryatid_process = { path = "../../process" }

# SDK to construct our own modules
caryatid_sdk = { path = "../../sdk" }

anyhow = "1.0"
config = "0.15.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.132"

