# Performance Test Suite for Caryatid
[package]
name = "performance_suite"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Comprehensive performance test suite for Caryatid pub/sub framework"

[dependencies]
# Caryatid framework
caryatid_process = { path = "../../process" }
caryatid_sdk = { path = "../../sdk" }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arcstr = { version = "1.2", features = ["serde"] }

# Configuration
config = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance measurement
hdrhistogram = "7.5"
sysinfo = "0.31"

# Output formatting
prettytable-rs = "0.10"
chrono = "0.4"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
