# Example Caryatid process with request/response
[package]
name = "request_example"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Example request/response Caryatid process"

[dependencies]
# Process to construct main
caryatid_process = { path = "../../process" }

# SDK to construct our own modules
caryatid_sdk = { path = "../../sdk" }

anyhow = "1.0"
config = "0.15.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.132"
chrono = "0.4.38"

