# Type message example Caryatid process
[package]
name = "typed_example"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Typed message example Caryatid process"

[dependencies]
# Process to construct main
caryatid_process = { path = "../../process" }

# SDK to construct our own modules
caryatid_sdk = { path = "../../sdk" }

anyhow = "1.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }

