# Caryatid Clock module

[package]
name = "clock"
version = "0.1.0"
edition = "2021"

[dependencies]
caryatid_sdk = { path = "../../sdk" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"

[lib]
path = "src/clock.rs"
