# Caryatid Clock module

[package]
name = "caryatid_module_clock"
version = "0.1.0"
edition = "2021"

[dependencies]
caryatid_sdk = { version="0.1.0", path = "../../sdk" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features=["serde"] }
serde = { version = "1.0.214", features = ["derive"] }

[lib]
path = "src/clock.rs"
