# Caryatid Playback module

[package]
name = "caryatid_module_playback"
version = "0.10.0"
edition = "2021"
authors = ["Alex Woods <alex.woods@iohk.io>"]
description = "Message playback module for Caryatid"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { version="0.13", path = "../../sdk" }
anyhow = "1.0"
serde_json = "1.0"
config = "0.15.11"
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive", "rc"] }

[lib]
path = "src/playback.rs"
