# Caryatid REST server module

[package]
name = "caryatid_module_rest_server"
version = "0.1.0"
edition = "2021"

[dependencies]
caryatid_sdk = { path = "../../sdk" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.6"
hyper = { version = "0.14", features = ["server", "client"] }
serde = { version = "1.0.214", features = ["derive"] }
futures = "0.3.31"

[lib]
path = "src/rest_server.rs"
