# Caryatid REST server module

[package]
name = "caryatid_module_rest_server"
version = "0.4.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "REST server module for Caryatid"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { version="0.4", path = "../../sdk" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
config = "0.15.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.6"
hyper = { version = "0.14", features = ["server", "client"] }
serde = { version = "1.0.214", features = ["derive"] }
futures = "0.3.31"

[lib]
path = "src/rest_server.rs"
