# Macros for defining Caryatid modules

[package]
name = "caryatid_macros"
version = "0.4.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Procedural macros for the Caryatid framework module SDK"
license = "Apache-2.0"

[lib]
proc-macro = true
path = "src/macros.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
async-trait = "0.1.88"
